# ntgcalls

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  SECURITY.md  main.py  nodejs_ld.txt  pyproject.toml  setup.py  version.properties
ntgcalls/: CMakeLists.txt  client.cpp  client.hpp  configs.hpp  exceptions.hpp  group_call_payload.cpp  join_voice_call_params.cpp  join_voice_call_params.hpp  main.cpp  ntgcalls.cpp  ntgcalls.hpp  pythonapi.cpp  stream.cpp  stream.hpp
ntgcalls/bindings/: capi.cpp  capi.h  ntgcalls.cpp  pythonapi.cpp
ntgcalls/ffmpeg/: ffmpeg.cpp  ffmpeg.hpp
ntgcalls/include/ntgcalls/: exceptions.hpp  ntgcalls.hpp  stream.hpp  stream_manager.hpp
ntgcalls/instances/: call_interface.cpp  call_interface.hpp  group_call.cpp  group_call.hpp  p2p_call.cpp  p2p_call.hpp
ntgcalls/io/: base_reader.cpp  base_reader.hpp  ffmpeg_reader.cpp  ffmpeg_reader.hpp  file_reader.cpp  file_reader.hpp  shell_reader.cpp  shell_reader.hpp
ntgcalls/media/: audio_streamer.cpp  audio_streamer.hpp  base_streamer.cpp  base_streamer.hpp  media_reader_factory.cpp  media_reader_factory.hpp  video_streamer.cpp  video_streamer.hpp
ntgcalls/models/: auth_params.hpp  call_payload.cpp  call_payload.hpp  candidate_message.cpp  candidate_message.hpp  dh_config.hpp  group_call_payload.cpp  group_call_payload.hpp  media_description.hpp  media_state.hpp  media_state_message.cpp  media_state_message.hpp  message.cpp  message.hpp  mod_exp_first.cpp  mod_exp_first.hpp  rtc_description_message.cpp  rtc_description_message.hpp  rtc_server.cpp  rtc_server.hpp
ntgcalls/signaling/: external_signaling_connection.cpp  external_signaling_connection.hpp  signaling.cpp  signaling.hpp  signaling_encryption.cpp  signaling_encryption.hpp  signaling_interface.cpp  signaling_interface.hpp  signaling_packet_transport.cpp  signaling_packet_transport.hpp  signaling_sctp_connection.cpp  signaling_sctp_connection.hpp  signaling_v1.cpp  signaling_v1.hpp  signaling_v2.cpp  signaling_v2.hpp
ntgcalls/signaling/crypto/: auth_key.cpp  auth_key.hpp  mod_exp_first.cpp  signaling_encryption.cpp  signaling_encryption.hpp
ntgcalls/signaling/messages/: candidate_message.cpp  candidates_message.cpp  candidates_message.hpp  initial_setup_message.cpp  initial_setup_message.hpp  media_state_message.cpp  message.cpp  message.hpp  negotiate_channels_message.cpp  negotiate_channels_message.hpp  rtc_description_message.cpp  rtc_description_message.hpp
ntgcalls/src/: ntgcalls.cpp  stream.cpp  stream_manager.cpp
ntgcalls/src/bindings/: ntgcalls.cpp  pythonapi.cpp
ntgcalls/src/devices/: alsa_device_module.cpp  base_device_module.cpp  camera_capturer_module.cpp  desktop_capturer_module.cpp  input_device.cpp  java_audio_device_module.cpp  java_video_capturer_module.cpp  media_device.cpp  oboe_device_module.cpp  open_sles_device_module.cpp  pulse_device_module.cpp  win_core_device_module.cpp
ntgcalls/src/instances/: call_interface.cpp  group_call.cpp  p2p_call.cpp
ntgcalls/src/io/: audio_file_writer.cpp  audio_mixer.cpp  audio_shell_writer.cpp  base_io.cpp  base_reader.cpp  base_writer.cpp  file_reader.cpp  shell_reader.cpp  sync_helper.cpp  threaded_audio_mixer.cpp  threaded_reader.cpp
ntgcalls/src/media/: audio_receiver.cpp  audio_sink.cpp  audio_streamer.cpp  base_sink.cpp  base_streamer.cpp  media_reader_factory.cpp  media_source_factory.cpp  video_receiver.cpp  video_sink.cpp  video_streamer.cpp
ntgcalls/utils/: auth_key.cpp  auth_key.hpp  binding_utils.cpp  binding_utils.hpp  dispatch_queue.cpp  dispatch_queue.hpp  hardware_info.cpp  hardware_info.hpp  log_sink_impl.cpp  log_sink_impl.hpp  mod_exp_first.cpp  mod_exp_first.hpp  signaling.cpp  signaling.hpp  signaling_connection.cpp  signaling_connection.hpp  signaling_packet_transport.cpp  signaling_packet_transport.hpp  time.cpp  time.hpp
wrtc/: CMakeLists.txt  enums.hpp  exceptions.cpp  exceptions.hpp  main.cpp  rtc.hpp  sdp_builder.cpp  sdp_builder.hpp  wrtc.hpp
wrtc/cmake/: Linux.cmake  Windows.cmake
wrtc/encoders/: video_decoder.cpp  video_decoder.hpp  video_decoder_config.hpp  video_encoder_config.hpp  video_factory_config.hpp
wrtc/enums/: rtc_ice_component.hpp
wrtc/interfaces/: instance_networking.cpp  instance_networking.hpp  media_stream.cpp  media_stream.hpp  media_stream_track.cpp  media_stream_track.hpp  native_connection.cpp  native_connection.hpp  network_interface.cpp  network_interface.hpp  peer_connection.cpp  peer_connection.hpp  reflector_port.cpp  reflector_port.hpp  reflector_relay_port_factory.cpp  reflector_relay_port_factory.hpp  rtc_dtls_transport.cpp  rtc_dtls_transport.hpp  rtc_ice_transport.cpp  rtc_ice_transport.hpp  rtc_peer_connection.cpp  rtc_peer_connection.hpp  rtc_rtc_sender.cpp  rtc_rtc_sender.hpp  sctp_data_channel_provider_interface_impl.cpp  sctp_data_channel_provider_interface_impl.hpp  sdp_builder.cpp  sdp_builder.hpp
wrtc/models/: candidate_description.cpp  connection_description.cpp  content_negotiation_context.cpp  content_negotiation_context.hpp  i420_image_data.cpp  i420_image_data.hpp  ice_candidate.cpp  ice_candidate.hpp  route_description.cpp  rtc_on_data_event.cpp  rtc_on_data_event.hpp  rtc_server.cpp  rtc_server.hpp  rtc_session_description.cpp  rtc_session_description.hpp  rtc_session_description_init.cpp  rtc_session_description_init.hpp
wrtc/src/: exceptions.cpp  sdp_builder.cpp
wrtc/utils/: bignum.cpp  bignum.hpp  binary.cpp  binary.hpp  encryption.cpp  encryption.hpp  g_zip.cpp  g_zip.hpp  instance_holder.hpp  random.cpp  random.hpp  sync.hpp  syncronized_callback.hpp
wrtc/video_coding/: types.hpp  video_coding.cpp  video_coding.hpp  video_decoder_config.cpp
wrtc/video_factory/: base_video_factory.cpp  base_video_factory.hpp  video_base_config.cpp  video_base_config.hpp  video_decoder_config.cpp  video_decoder_config.hpp  video_decoder_factory.cpp  video_decoder_factory.hpp  video_encoder_config.cpp  video_encoder_config.hpp  video_encoder_factory.cpp  video_encoder_factory.hpp  video_factory_config.cpp  video_factory_config.hpp
(+663 files in other folders)
